syntax = "proto3";
package appmixer;

// コード自動生成されるディレクトリを指定
option go_package = "todo.com/proto/appmixer";

// Although this might be error, build is successful working
import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "services/status_master.proto";

service Appmixer {
  // Sample
  rpc SayHello (AppRequest) returns (AppResponse) {
    option (google.api.http) = {
      post: "/todo/say-hello"
      body: "*"
    };
  }

  // /statuses
  rpc GetStatuses (statusmaster.StatusRequest) returns (statusmaster.StatusResponse) {
    option (google.api.http) = {
      get: "/statuses"
    };
  }
}

// -----------------------------------------------
// Sample
// -----------------------------------------------
message AppRequest {
  string name = 1[(buf.validate.field).string.min_len = 1];
}

message AppResponse {
  string message = 1;
}


